horizontal scroll fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
 
 html,
 body {
+  overflow-x: hidden;
   font-size: 16px;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
